[APP-3031] Fix text overflow on certain characters and font

--- a/components/atoms/BubbleDropdown/BubbleDropdown.scss
+++ b/components/atoms/BubbleDropdown/BubbleDropdown.scss
@@ -2,6 +2,7 @@
 .uic--bubble-dropdown {
   $height: 4.4rem;
   $border-radius: $height / 2;
+  @include source-sans-pro(1.4rem);
 
   .uic--bubble-dropdown__control {
     border: 0;
@@ -40,6 +41,7 @@
     line-height: 1.4rem;
     margin: 0;
     max-width: none;
+    overflow: visible;
     position: relative;
     transform: none;
   }
